# data-bearer

./: .gitignore  LICENSE  README.md  pyproject.toml
data_bearer/commands/: init_config.py  run_config.py  run_sql.py
data_bearer/connectors/: generic_connector.py  mysql_connector.py  pgsql.py  sqlitesql.py
data_bearer/utils/: run_utils.py
sql/: test_mysql.sql  test_postgresql.sql
test_files/: test_sqlite.db
tests/: test_connectors.py  test_utils.py  test_version.py
