[tool.poetry]
name = "data-bearer"
version = "0.1.1"
description = "Small CLI for interacting with Database systems "
authors = ["DragosPet <iuliandragospet@gmail.com>"]
readme = "README.md"
packages = [{include = "data_bearer"}]

[tool.poetry.dependencies]
python = "^3.8"
psycopg = {extras = ["binary"], version = "^3.1.8"}
pandas = "^1.5.3"
python-dotenv = "^0.21.1"
ConfigArgParse = "^1.5.3"
PyYAML = "^6.0"
mysql-connector-python = "^8.0.32"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
pylint = "^2.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bearer-init-config = "data_bearer.commands.init_config:main"
bearer-run-sql= "data_bearer.commands.run_sql:main"